src/test/ui/compile-fail-migration/macro-attribute.stderr
error: unexpected token: `$`
  --> $DIR/macro-attribute.rs:11:7
   |
LL | #[doc = $not_there] //~ error: unexpected token: `$`
   |       ^

error: aborting due to previous error

